Poesía sobre langostinos

--- a/HTML/monos.html
+++ b/HTML/monos.html
@@ -8,6 +8,8 @@
     <meta name="keywords" content="HTML, CSS, JavaScript, monos">
     <meta name="author" content="Fernando">
 
+    <title>🐒Monos</title>
+
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
