ASCII ART Naturaleza

--- a/HTML/coches.html
+++ b/HTML/coches.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Página web sobre monos">
-    <meta name="keywords" content="HTML, CSS, JavaScript, monos">
+    <meta name="description" content="Página web sobre coches con ASCII ART">
+    <meta name="keywords" content="HTML, CSS, JavaScript, coches, ascii art">
     <meta name="author" content="Fernando">
 
     <title>🚗Coches</title>
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-    <h1>ASCII ART coches</h1>
+    <h1>🚗ASCII ART coches</h1>
 
 <pre>
     Art by lgbeard
