--- a/HTML/ofertas_mochilas.html
+++ b/HTML/ofertas_mochilas.html
@@ -13,36 +13,22 @@
     <p>
         <ins>52,50 €</ins>
         <del>75 €</del>
-        30%
+        <span class="porcentaje">30%</span>
     </p>
 
-    <h2>Imagen 0 de Mochila Retreat Mini de Herschel Supply azul
-Herschel
+    <h2>Mochila mediana lisa de nylon</h2>
+    <p>
+        <ins>55,95 €</ins>
+        <del>79,95 €</del>
+        <span class="porcentaje">30%</span>
+    </p>
 
-Mochila Retreat Mini de Herschel Supply azul
-75 €
-
-
-AÑADIR
-Imagen 0 de Mochila mediana lisa de nylon
-Desigual
-
-Mochila mediana lisa de nylon
-55,95 €
-79,95 €
-30%
-
-
-AÑADIR
-Imagen 0 de Mochila
-Robert Pietri
-
-Mochila
-52,50 €
-75 €
-30%
-
-2 Colores
+    <h2>Robert Pietri</h2>
+    <p>
+        <ins>52,50 €</ins>
+        <del>75 €</del>
+        <span class="porcentaje">30%</span>
+    </p>
     
 </body>
 </html>
