--- a/HTML/formato_texto/volumenes.html
+++ b/HTML/formato_texto/volumenes.html
@@ -11,19 +11,19 @@
 
     <p>
         Cubo:<br>
-        <img src="img/cubo.png" alt="cubo"><br>
+        <img src="../img/cubo.png" alt="cubo"><br>
         V = a<sup>3</sup>
     </p>
 
     <p>
         Prisma:<br>
-        <img src="img/prisma.png" alt="prisma"><br>
+        <img src="../img/prisma.png" alt="prisma"><br>
         V = A<sub>b</sub> x h
     </p>
 
     <p>
         Esfera:<br>
-        <img src="img/esfera.png" alt="esfera"><br>
+        <img src="../img/esfera.png" alt="esfera"><br>
         V = (4/3) · &pi; · r<sup>3</sup>
     </p>
 
