--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <h1>Prácticas de HTML</h1>
+
     <p>
         <a href="monos.html">Monos</a>
     </p>
@@ -21,6 +23,17 @@
     </p>
     <p>
         <a href="naturaleza.html">Naturaleza</a>
+    </p>
+    
+    <h2>Formato de texto</h2>
+    <p>
+        <a href="formato_texto/el_senyor_de_los_anillos.html">El Señor de los Anillos</a>
+    </p>
+    <p>
+        <a href="formato_texto/volumenes.html">Volúmenes</a>
+    </p>
+    <p>
+        <a href="formato_texto/ofertas_mochilas.html">Ofertas mochilas</a>
     </p>
 </body>
 
