Organización de carpetas

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,6 +12,8 @@
 <body>
     <h1>Prácticas de HTML</h1>
 
+    <h2>Títulos, párrafos, saltos de línea</h2>
+
     <p>
         <a href="monos.html">Monos</a>
     </p>
