--- a/HTML/formato_texto/volumenes.html
+++ b/HTML/formato_texto/volumenes.html
@@ -33,9 +33,7 @@
     
     <h3>Imágenes:</h3>
     <a href="https://www.matematica.pt/images/geometria/cubo.png"><img width="50" src="https://www.matematica.pt/images/geometria/cubo.png" alt="cubo"></a>
-
-    <a href="https://www.matematica.pt/images/geometria/prisma.png"><img width="50" src="https://www.matematica.pt/images/geometria/prisma.png" alt="cubo"></a>
-
-    <a href="https://www.matematica.pt/images/geometria/esfera.png"><img width="50" src="https://www.matematica.pt/images/geometria/esfera.png" alt="cubo"></a>
+    <a href="https://www.matematica.pt/images/geometria/prisma.png"><img width="50" src="https://www.matematica.pt/images/geometria/prisma.png" alt="prisma"></a>
+    <a href="https://www.matematica.pt/images/geometria/esfera.png"><img width="50" src="https://www.matematica.pt/images/geometria/esfera.png" alt="esfera"></a>
 </body>
 </html>
