--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,27 +15,27 @@
     <h2>Títulos, párrafos, saltos de línea</h2>
 
     <p>
-        <a href="monos.html">Monos</a>
+        <a href="conceptos_basicos/monos.html" title="Curiosidades sobre los monos">Monos</a>
     </p>
     <p>
-        <a href="langostinos.html">Langostinos</a>
+        <a href="conceptos_basicos/langostinos.html" title="Poesía sobre langostinos">Langostinos</a>
     </p>
     <p>
-        <a href="coches.html">Coches</a>
+        <a href="conceptos_basicos/coches.html" title="Dibujos de coches hechos con ASCII Art">Coches</a>
     </p>
     <p>
-        <a href="naturaleza.html">Naturaleza</a>
+        <a href="conceptos_basicos/naturaleza.html" title="ASCII Art de naturaleza">Naturaleza</a>
     </p>
     
     <h2>Formato de texto</h2>
     <p>
-        <a href="formato_texto/el_senyor_de_los_anillos.html">El Señor de los Anillos</a>
+        <a href="formato_texto/el_senyor_de_los_anillos.html" title="Extracto de una de las película del Señor de los Anillos">El Señor de los Anillos</a>
     </p>
     <p>
-        <a href="formato_texto/volumenes.html">Volúmenes</a>
+        <a href="formato_texto/volumenes.html" title="Fórmulas pra el cálculo de volúmenes">Volúmenes</a>
     </p>
     <p>
-        <a href="formato_texto/ofertas_mochilas.html">Ofertas mochilas</a>
+        <a href="formato_texto/ofertas_mochilas.html" title="Ofertas de mnochilas black friday 2024">Ofertas mochilas</a>
     </p>
 </body>
 
