Enlaces a secciones de la propia página

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -37,6 +37,12 @@
     <p>
         <a href="formato_texto/ofertas_mochilas.html" title="Ofertas de mnochilas black friday 2024">Ofertas mochilas</a>
     </p>
+
+    <h2>Enlaces</h2>
+
+    <p>
+        <a href="enlaces/la_comunidad_del_anillo.html">La Comunidad del Anillos</a>
+    </p>
 </body>
 
 </html>
