Lista en el índice

--- a/HTML/enlaces/la_comunidad_del_anillo.html
+++ b/HTML/enlaces/la_comunidad_del_anillo.html
@@ -23,7 +23,12 @@
                 <li><a href="#bandasonora">Banda sonora</a></li>
             </ul>
         </li>
-        <li><a href="#recpecion">Recepción</a></li>
+        <li>
+            <a href="#recepcion">Recepción</a>
+            <ul>
+                <li><a href="#critica">Crítica</a></li>
+            </ul>
+        </li>
     </ul>
 
     <h2 id="introduccion">Introducción</h2>
@@ -134,7 +139,7 @@
 
     <p>La película se estrenó el 19 de diciembre de 2001 y recibió alabanzas generales tanto de los críticos de cine como del público, que enseguida la consideraron un hito de la cinematografía en general y del género fantástico en particular. Desde entonces suele incluirse en los listados de las mejores películas de fantasía de la historia del cine. La película fue un éxito de recaudación con 871 millones de dólares de ganancias a nivel mundial, con lo que se convirtió en la segunda película más taquillera de ese año, solo por detrás de Harry Potter y la piedra filosofal</p>
     
-    <p>Crítica
+    <h3 id="critica">Crítica</h3>
     <p>La Comunidad del Anillo recibió la aclamación universal de la crítica y fue una de las mejores películas de 2001 bien revisados, recibe críticas positivas de 92% en Rotten Tomatoes. Roger Ebert dio a la película tres de cada cuatro estrellas y escribió: "Peter Jackson ... ha hecho un trabajo para, y de, nuestro tiempo. Se abrazaron, me imagino, por muchos fans de Tolkien y asumen los aspectos de un culto. Se trata de un candidato a muchos Oscar. Es una producción impresionante en su audacia y amplitud, y hay pocos pequeños detalles que no sean los adecuados". FilmAffinity le da un 8,0 sobre 10, basándose en más de 163.000 votos</p>
     
     <p>Versión extendida
