--- a/HTML/index.html
+++ b/HTML/index.html
@@ -40,10 +40,10 @@
         <a href="formato_texto/ofertas_mochilas.html" title="Ofertas de mnochilas black friday 2024">Ofertas mochilas</a>
     </p>
 
-    <h2>Enlaces</h2>
+    <h2>Enlaces y listas</h2>
 
     <p>
-        <a href="enlaces/la_comunidad_del_anillo.html">La Comunidad del Anillos</a>
+        <a href="enlaces/la_comunidad_del_anillo.html">La Comunidad del Anillo</a>
     </p>
 </body>
 
