--- a/HTML/formularios/solicitud_oferta_laboral.html
+++ b/HTML/formularios/solicitud_oferta_laboral.html
@@ -4,27 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solicitud empleo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Formulario solicitud empleo</h1>
+    <div class="container">
+        <h1>Formulario solicitud empleo</h1>
 
-    <form>
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" required><br>
+        <form>
+            <label for="nombre" class="form-label">Nombre:</label>
+            <input type="text" id="nombre" class="form-control" required>
 
-        Apellidos:
-        <input type="text" required><br>
+            <label for="apellidos" class="form-label">Apellidos:</label>
+            <input type="text" id="apellidos" class="form-control" required>
 
-        Correo:
-        <input type="email" required><br>
+            <label for="correo" class="form-label">Correo:</label>
+            <input type="email" id="correo" class="form-control" required>
 
-        Salario esperado:
-        <input type="number" required><br>
+            <label for="salario" class="form-label">Salario esperado:</label>
+            <input type="number" id="salario" class="form-control mb-3" required>
 
-        <label for="conducir">Carnet de conducir:</label>
-        <input type="checkbox" id="conducir" required><br>
+            <input type="checkbox" id="conducir" class="form-check-input" required>
+            <label for="conducir" class="form-check-label mb-3">Carnet de conducir:</label><br>
 
-        <button>Enviar</button>
-    </form>
+            <button class="btn btn-primary mb-3">Enviar</button>
+        </form>
+    </div>
 </body>
 </html>
