Atributos campos de texto

--- a/HTML/formularios/reserva_cita.html
+++ b/HTML/formularios/reserva_cita.html
@@ -7,11 +7,16 @@
 </head>
 <body>
     <form>
-        <label for="nombre">Nombre completo:</label> 
-        <input type="text" id="nombre" value="Fernando Ruiz" readonly><br>
+        <label for="correo">Correo (identificador usuario):</label> 
+        <input type="text" id="correo" value="fernando@correo.com" readonly disabled><br>
 
-        <label for="correo">Correo:</label> 
-        <input type="text" id="correo" value="fernando@correo.com">
+        <label for="nombre">Nombre completo (min. 3 caracteres):</label> 
+        <input type="text" id="nombre" value="Fernando Ruiz" minlength="3" maxlength="50" required><br>
+
+        <label for="observaciones">Observaciones</label>
+        <input type="text" id="observaciones" placeholder="Indícanos cualquier consideración adicional..." size="50"><br>
+
+        <button>Enviar</button>
     </form>
 </body>
 </html>
