--- a/HTML/formularios/solicitud_oferta_laboral.html
+++ b/HTML/formularios/solicitud_oferta_laboral.html
@@ -47,10 +47,11 @@
             <input type="radio" name="provincia" id="castellon" class="form-check-input">
             <label for="castellon" class="form-check-label mb-3">Castellón</label><br>
 
-            <label for="foto">Sube tu currículum aquí:</label>
-            <input type="file"><br>
+            <label for="curriculum" class="form-label">Sube tu currículum aquí:</label>
+            <input type="file" id="curriculum" class="form-control"><br>
 
-            <button class="btn btn-primary my-3">Enviar</button>
+            <button type="reset" class="btn btn-danger my-3">Reset</button>
+            <button type="submit" class="btn btn-primary my-3">Enviar</button>
         </form>
     </div>
 </body>
