--- a/HTML/index.html
+++ b/HTML/index.html
@@ -30,21 +30,39 @@
     </ul>
     
     <h2>Formato de texto</h2>
-    <p>
-        <a href="formato_texto/el_senyor_de_los_anillos.html" title="Extracto de una de las película del Señor de los Anillos">El Señor de los Anillos</a>
-    </p>
-    <p>
-        <a href="formato_texto/volumenes.html" title="Fórmulas pra el cálculo de volúmenes">Volúmenes</a>
-    </p>
-    <p>
-        <a href="formato_texto/ofertas_mochilas.html" title="Ofertas de mnochilas black friday 2024">Ofertas mochilas</a>
-    </p>
+    <ul>
+        <li>
+            <a href="formato_texto/el_senyor_de_los_anillos.html" title="Extracto de una de las película del Señor de los Anillos">El Señor de los Anillos</a>
+        </li>
+        <li>
+            <a href="formato_texto/volumenes.html" title="Fórmulas pra el cálculo de volúmenes">Volúmenes</a>
+        </li>
+        <li>
+            <a href="formato_texto/ofertas_mochilas.html" title="Ofertas de mnochilas black friday 2024">Ofertas mochilas</a>
+        </li>
+    </ul>
 
     <h2>Enlaces y listas</h2>
 
-    <p>
-        <a href="enlaces/la_comunidad_del_anillo.html">La Comunidad del Anillo</a>
-    </p>
+    <ul>
+        <li>
+            <a href="enlaces/la_comunidad_del_anillo.html">La Comunidad del Anillo</a>
+        </li>
+    </ul>
+
+    <h2>Formularios</h2>
+
+    <ul>
+        <li>
+            <a href="formularios/login.html">Login</a>
+        </li>
+        <li>
+            <a href="formularios/reserva_cita.html">Reserva de cita</a>
+        </li>
+        <li>
+            <a href="formularios/solicitud_oferta_laboral.html">Solicitud de oferta laboral (con Bootstrap)</a>
+        </li>
+    </ul>
 </body>
 
 </html>
