Últimos cambios formularios

--- a/HTML/formularios/reserva_cita.html
+++ b/HTML/formularios/reserva_cita.html
@@ -15,7 +15,7 @@
         <label for="nombre">Nombre completo (min. 3 caracteres):</label><br>
         <input type="text" id="nombre" value="Fernando Ruiz" minlength="3" maxlength="50" required><br><br>
 
-        <label for="exampleDataList" class="form-label">¿Qué dirección prefieres?</label>
+        <label for="exampleDataList" class="form-label">¿Qué dirección prefieres?</label><br>
         <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Introduce para buscar...">
         <datalist id="datalistOptions">
             <option value="Alicante">
