--- a/HTML/formularios/solicitud_oferta_laboral.html
+++ b/HTML/formularios/solicitud_oferta_laboral.html
@@ -11,7 +11,7 @@
         <h1>Formulario solicitud empleo</h1>
 
         <form>
-            <label for="nombre" class="form-label">Nombrea:</label>
+            <label for="nombre" class="form-label">Nombre:</label>
             <input type="text" id="nombre" class="form-control mb-3" required>
 
             <label for="apellidos" class="form-label">Apellidos:</label>
