--- a/HTML/formularios/login.html
+++ b/HTML/formularios/login.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Login</h1>
 
-    <form>
+    <form action="login.php" method="post">
         <label for="usuario">Usuario</label><br>
         <input type="text" id="usuario" name="usuario" required><br>
 
