Completado formulario de google

--- a/HTML/formularios/google.html
+++ b/HTML/formularios/google.html
@@ -10,7 +10,7 @@
     <div class="container text-center">
         <img class="img-fluid mt-5" src="https://www.google.com/logos/doodles/2024/fathers-day-nov-10-2024-6753651837110412-2x.png">
         <form method="get" action="https://google.es/search">
-            <input type="search" class="form-control mt-3">
+            <input type="search" id="q" name="q" class="form-control mt-3">
             <button class="btn btn-secondary mt-3">Buscar</button>
         </form>
     </div>
