--- a/HTML/formularios/google.html
+++ b/HTML/formularios/google.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Google</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
-  <body>
+  <body data-bs-theme="dark">
+    <div class="position-absolute top-0 end-0 m-3">
+        <button id="botonTema" class="btn btn-secondary">
+            TEMA
+        </button>
+    </div>
+
     <div class="container text-center">
         <img class="img-fluid mt-5" src="https://www.google.com/logos/doodles/2024/fathers-day-nov-10-2024-6753651837110412-2x.png">
         <form method="get" action="https://google.es/search">
@@ -15,5 +21,6 @@
         </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="google.js"></script>
   </body>
 </html>
