--- a/HTML/formularios/google.html
+++ b/HTML/formularios/google.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Google</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   </head>
   <body data-bs-theme="dark">
     <div class="position-absolute top-0 end-0 m-3">
         <button id="botonTema" class="btn btn-secondary">
-            TEMA
+            <i class="bi bi-moon-stars-fill"></i>
         </button>
     </div>
 
