--- a/HTML/formularios/google.html
+++ b/HTML/formularios/google.html
@@ -10,7 +10,7 @@
   <body data-bs-theme="dark">
     <div class="position-absolute top-0 end-0 m-3">
         <button id="botonTema" class="btn btn-secondary">
-            <i class="bi bi-moon-stars-fill"></i>
+            <i id="iconoTema" class="bi bi-moon-stars-fill"></i>
         </button>
     </div>
 
