--- a/HTML/formularios/google.html
+++ b/HTML/formularios/google.html
@@ -15,7 +15,33 @@
     </div>
 
     <div class="container text-center">
-        <img class="img-fluid mt-5" src="https://www.google.com/logos/doodles/2024/fathers-day-nov-10-2024-6753651837110412-2x.png">
+        <div id="carouselExampleCaptions" class="carousel slide">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="https://www.google.com/logos/doodles/2024/fathers-day-nov-10-2024-6753651837110412-2x.png" class="d-block w-100" alt="Día del padre">
+              </div>
+              <div class="carousel-item">
+                <img src="https://www.google.com/logos/doodles/2021/doodle-champion-island-games-september-05-6753651837109292-2xa.gif" class="d-block w-100" alt="Videojuegos">
+              </div>
+              <div class="carousel-item">
+                <img src="https://www.google.com/logos/doodles/2024/rise-of-the-half-moon-6753651837110583.2-2xa.gif" class="d-block w-100" alt="Luna">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+
         <form method="get" action="https://google.es/search">
             <input type="search" id="q" name="q" class="form-control mt-3">
             <button class="btn btn-secondary mt-3">Buscar</button>
