--- a/HTML/formularios/google.html
+++ b/HTML/formularios/google.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="container text-center">
-        <div id="carouselExampleCaptions" class="carousel slide">
+        <div id="carouselExampleCaptions" class="carousel slide mt-5">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -26,7 +26,7 @@
                 <img src="https://www.google.com/logos/doodles/2024/fathers-day-nov-10-2024-6753651837110412-2x.png" class="d-block w-100" alt="Día del padre">
               </div>
               <div class="carousel-item">
-                <img src="https://www.google.com/logos/doodles/2021/doodle-champion-island-games-september-05-6753651837109292-2xa.gif" class="d-block w-100" alt="Videojuegos">
+                <img src="https://www.google.com/logos/doodles/2024/celebrating-popcorn-6753651837110076.3-2xa.gif" class="d-block w-100" alt="Videojuegos">
               </div>
               <div class="carousel-item">
                 <img src="https://www.google.com/logos/doodles/2024/rise-of-the-half-moon-6753651837110583.2-2xa.gif" class="d-block w-100" alt="Luna">
