--- a/HTML/formularios/google.html
+++ b/HTML/formularios/google.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="container text-center">
-        <div id="carouselExampleCaptions" class="carousel slide mt-5">
+        <div id="carouselExampleCaptions" data-bs-interval="2000" data-bs-ride="carousel" class="carousel slide mt-5">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -32,13 +32,11 @@
                 <img src="https://www.google.com/logos/doodles/2024/rise-of-the-half-moon-6753651837110583.2-2xa.gif" class="d-block w-100" alt="Luna">
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
+            <button class="carousel-control-prev btn btn-lg" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                <i class="bi bi-arrow-left-square-fill text-danger"></i>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
+            <button class="carousel-control-next btn btn-lg" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <i class="bi bi-arrow-right-square-fill text-danger"></i>
             </button>
           </div>
 
