Tabla con imágenes

--- a/HTML/tablas/ejercicio_simple.html
+++ b/HTML/tablas/ejercicio_simple.html
@@ -9,6 +9,8 @@
 <body>
     <h1>Ejemplo muy simple de tabla</h1>
 
+    <h2>Ejemplo con texto</h2>
+
     <table>
         <tr>
             <td>1. Hola, soy tu primera celda.</td>
@@ -23,6 +25,20 @@
             <td>8. Segunda fila, cuarta celda.</td>
         </tr>
     </table>
+
+    <h2>Ejemplo con imágenes</h2>
+
+    <table>
+        <tr>
+            <td>1</td>
+            <td>2</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>4</td>
+        </tr>
+    </table>
+
 
 </body>
 </html>
