Tabla con imágenes

--- a/HTML/tablas/ejercicio_simple.html
+++ b/HTML/tablas/ejercicio_simple.html
@@ -30,12 +30,12 @@
 
     <table>
         <tr>
-            <td>1</td>
-            <td>2</td>
+            <td><img src="https://picsum.photos/id/70/200/100"></td>
+            <td><img src="https://picsum.photos/id/74/200/100"></td>
         </tr>
         <tr>
-            <td>3</td>
-            <td>4</td>
+            <td><img src="https://picsum.photos/id/76/200/100"></td>
+            <td><img src="https://picsum.photos/id/82/200/100"></td>
         </tr>
     </table>
 
