Otra tabla con imágenes

--- a/HTML/tablas/ejercicio_simple.html
+++ b/HTML/tablas/ejercicio_simple.html
@@ -39,6 +39,18 @@
         </tr>
     </table>
 
+    <h2>Otro ejemplo con imágenes</h2>
+
+    <table>
+        <tr>
+            <td><img src="https://placedog.net/200/100?id=97">1</td>
+            <td><img src="...">18</td>
+        </tr>
+        <tr>
+            <td><img src="...">12</td>
+            <td><img src="...">19</td>
+        </tr>
+    </table>
 
 </body>
 </html>
