--- a/HTML/tablas/ejercicio_simple.html
+++ b/HTML/tablas/ejercicio_simple.html
@@ -43,12 +43,12 @@
 
     <table>
         <tr>
-            <td><img src="https://placedog.net/200/100?id=97">1</td>
-            <td><img src="...">18</td>
+            <td><img src="https://placedog.net/200/100?id=1"></td>
+            <td><img src="https://placedog.net/200/100?id=18"></td>
         </tr>
         <tr>
-            <td><img src="...">12</td>
-            <td><img src="...">19</td>
+            <td><img src="https://placedog.net/200/100?id=12"></td>
+            <td><img src="https://placedog.net/200/100?id=19"></td>
         </tr>
     </table>
 
