Horario con bootstrap

--- a/HTML/tablas/protectora_de_ibi.html
+++ b/HTML/tablas/protectora_de_ibi.html
@@ -10,12 +10,13 @@
     <h1>Protectora de Ibi</h1>
     
     <table>
+        <caption>Perros en adopción</caption>
         <thead>
             <tr>
                 <th>Imagen</th>
                 <th>Nombre</th>
                 <th>Edad</th>
-                <th>Descripcion</th>
+                <th>Descripción</th>
             </tr>
         </thead>
         <tbody>
