--- a/HTML/tablas/protectora_de_ibi_con_bootstrap.html
+++ b/HTML/tablas/protectora_de_ibi_con_bootstrap.html
@@ -12,12 +12,13 @@
         
         <div class="table-responsive">
             <table class="table table-hover table-bordered">
+                <caption>Perros en adopción</caption>
                 <thead>
                     <tr>
                         <th>Imagen</th>
                         <th>Nombre</th>
                         <th>Edad</th>
-                        <th>Descripcion</th>
+                        <th>Descripción</th>
                     </tr>
                 </thead>
                 <tbody class="table-group-divider">
