--- a/HTML/tablas/horario_con_bootstrap.html
+++ b/HTML/tablas/horario_con_bootstrap.html
@@ -14,7 +14,7 @@
         <h1>Horario</h1>
 
         <div class="table-responsive">
-            <table class="table table-bordered border-danger text-center border border-3">
+            <table class="table border-purple table-bordered text-center border border-3">
                 <thead>
                     <tr>
                         <th><i class="bi bi-clock"></i></th>
