--- a/HTML/tablas/protectora_de_ibi.html
+++ b/HTML/tablas/protectora_de_ibi.html
@@ -20,25 +20,25 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
+            <tr class="fondo-rosa">
                 <td><img src="https://protectoradeibi.com/imas/animales/_2357/thumbnail_square.jpg?id=12574" width="200"></td>
                 <td>Perla</td>
                 <td>8 años</td>
                 <td>Hola soy Perla un cruce de mastín, vivía en un negocio pero cuando lo traspasaron me dejaron allí abandonada.</td>
             </tr>
-            <tr>
+            <tr class="fondo-azul">
                 <td><img src="https://protectoradeibi.com/imas/animales/_2356/thumbnail_square.jpg?id=12570" width="200"></td>
                 <td>Gini</td>
                 <td>4 años</td>
                 <td>Adora jugar con pelotas, peluches y juguetes en general. Le gusta mucho el agua y se mete a refrescarse en ella. Es una perrita muy muy cariñosa y disfruta de la compañía humana.</td>
             </tr>
-            <tr>
+            <tr class="fondo-amarillo">
                 <td><img src="https://protectoradeibi.com/imas/animales/_2355/thumbnail_square.jpg?id=12566" width="200"></td>
                 <td>Lucky</td>
                 <td>6 años</td>
                 <td>Soy un perro muy serio, pero muy sociable, me encanta que me paseen los niños.</td>
             </tr>
-            <tr>
+            <tr class="fondo-verde">
                 <td><img src="https://protectoradeibi.com/imas/animales/_2354/thumbnail_square.jpg?id=12563" width="200"></td>
                 <td>Ferrero</td>
                 <td>3 años</td>
