Añadidos temas con Bootswatch

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -62,7 +62,30 @@
         <li>
             <a href="formularios/solicitud_oferta_laboral.html">Solicitud de oferta laboral (con Bootstrap)</a>
         </li>
+        <li>
+            <a href="formularios/google.html">Página de inicio de Google</a>
+        </li>
     </ul>
+
+    <h2>Tablas</h2>
+
+    <ul>
+        <li>
+            <a href="tablas/protectora_de_ibi.html">Protectora de Ibi</a>
+        </li>
+        <li>
+            <a href="tablas/protectora_de_ibi_con_bootstrap.html">Protectora de Ibi con Bootstrap</a>
+        </li>
+    </ul>
+
+    <h2>Temas</h2>
+
+    <ul>
+        <li>
+            <a href="tablas/protectora_de_ibi_con_bootswatch_tema_quartz.html">Protectora de Ibi con Bootswatch estilo Quartz</a>
+        </li>
+    </ul>
+
 </body>
 
 </html>
