Ejemplos con varios temas de Bootswatch desde el índice

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -78,11 +78,20 @@
         </li>
     </ul>
 
-    <h2>Temas</h2>
+    <h2>Temas (más info <a href="https://bootswatch.com/">aquí</a> y enlaces CDN <a href="https://cdnjs.com/libraries/bootswatch">aquí</a>)</h2>
 
     <ul>
         <li>
             <a href="tablas/protectora_de_ibi_con_bootswatch_tema_quartz.html">Protectora de Ibi con Bootswatch estilo Quartz</a>
+        </li>
+        <li>
+            <a href="tablas/protectora_de_ibi_con_bootswatch_tema_superhero.html">Protectora de Ibi con Bootswatch estilo Superhero</a>
+        </li>
+        <li>
+            <a href="tablas/protectora_de_ibi_con_bootswatch_tema_vapor.html">Protectora de Ibi con Bootswatch estilo Vapor</a>
+        </li>
+        <li>
+            <a href="tablas/protectora_de_ibi_con_bootswatch_tema_sketchy.html">Protectora de Ibi con Bootswatch estilo Sketchy</a>
         </li>
     </ul>
 
