Bordes redondeados en la tabla del horario

--- a/HTML/tablas/horario_con_bootstrap.html
+++ b/HTML/tablas/horario_con_bootstrap.html
@@ -13,8 +13,8 @@
     <div class="container">
         <h1>Horario</h1>
 
-        <div class="table-responsive">
-            <table class="table border-purple table-bordered text-center border border-3">
+        <div class="table-responsive border-purple rounded-4 border border-3">
+            <table class="table table-bordered border-primary text-center m-0">
                 <thead>
                     <tr>
                         <th><i class="bi bi-clock"></i></th>
