--- a/HTML/index.html
+++ b/HTML/index.html
@@ -73,9 +73,6 @@
         <li>
             <a href="tablas/protectora_de_ibi.html">Protectora de Ibi</a>
         </li>
-        <li>
-            <a href="tablas/protectora_de_ibi_con_bootstrap.html">Protectora de Ibi con Bootstrap</a>
-        </li>
     </ul>
 
     <h2>Temas (más info <a href="https://bootswatch.com/">aquí</a> y enlaces CDN <a href="https://cdnjs.com/libraries/bootswatch">aquí</a>)</h2>
@@ -92,6 +89,14 @@
         </li>
         <li>
             <a href="tablas/protectora_de_ibi_con_bootswatch_tema_sketchy.html">Protectora de Ibi con Bootswatch estilo Sketchy</a>
+        </li>
+    </ul>
+
+    <h2>Selector de Temas</h2>
+
+    <ul>
+        <li>
+            <a href="tablas/protectora_de_ibi_con_bootstrap.html">Protectora de Ibi con selector de temas de Bootswatch</a>
         </li>
     </ul>
 
