--- a/HTML/tablas/protectora_de_ibi_con_bootstrap.html
+++ b/HTML/tablas/protectora_de_ibi_con_bootstrap.html
@@ -3,13 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link id="enlace-tema" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Protectora de Ibi</title>
 </head>
 <body>
     <div class="container">
         <h1>Protectora de Ibi</h1>
         
+        <select id="selector-tema" class="form-select mb-2">
+            <option value="bootstrap" selected>Bootstrap (Predeterminado)</option>
+            <option value="cerulean">Cerulean</option>
+            <option value="cosmo">Cosmo</option>
+            <option value="cyborg">Cyborg</option>
+            <option value="darkly">Darkly</option>
+            <option value="flatly">Flatly</option>
+            <option value="journal">Journal</option>
+            <option value="litera">Litera</option>
+            <option value="lumen">Lumen</option>
+            <option value="lux">Lux</option>
+            <option value="minty">Minty</option>
+            <option value="morph">Morph</option>
+            <option value="pulse">Pulse</option>
+            <option value="quartz">Quartz</option>
+            <option value="sandstone">Sandstone</option>
+            <option value="simplex">Simplex</option>
+            <option value="sketchy">Sketchy</option>
+            <option value="slate">Slate</option>
+            <option value="solar">Solar</option>
+            <option value="spacelab">Spacelab</option>
+            <option value="superhero">Superhero</option>
+            <option value="united">United</option>
+            <option value="vapor">Vapor</option>
+            <option value="yeti">Yeti</option>
+            <option value="zephyr">Zephyr</option>
+        </select>        
+
         <div class="table-responsive">
             <table class="table table-hover table-bordered">
                 <caption>Perros en adopción</caption>
@@ -52,5 +80,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <script src="script.js"></script>
 </body>
 </html>
