--- a/HTML/tablas/protectora_de_ibi_con_bootstrap.html
+++ b/HTML/tablas/protectora_de_ibi_con_bootstrap.html
@@ -6,10 +6,15 @@
     <link id="enlace-tema" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Protectora de Ibi</title>
 </head>
-<body>
+<body data-bs-theme="dark">
     <div class="container">
         <h1>Protectora de Ibi</h1>
         
+        <select id="selector-claro-oscuro" class="form-select mb-2">
+            <option value="dark" selected>Tema oscuro (Predeterminado)</option>
+            <option value="light" selected>Tema claro</option>
+        </select>
+
         <select id="selector-tema" class="form-select mb-2">
             <option value="bootstrap" selected>Bootstrap (Predeterminado)</option>
             <option value="cerulean">Cerulean</option>
