Guardadas preferencias usuario en temas

--- a/HTML/tablas/protectora_de_ibi_con_bootstrap.html
+++ b/HTML/tablas/protectora_de_ibi_con_bootstrap.html
@@ -12,7 +12,7 @@
         
         <select id="selector-claro-oscuro" class="form-select mb-2">
             <option value="dark" selected>Tema oscuro (Predeterminado)</option>
-            <option value="light" selected>Tema claro</option>
+            <option value="light">Tema claro</option>
         </select>
 
         <select id="selector-tema" class="form-select mb-2">
