--- a/HTML/index.html
+++ b/HTML/index.html
@@ -100,6 +100,14 @@
         </li>
     </ul>
 
+    <h2>Fuentes de letra y estilos de texto</h2>
+
+    <ul>
+        <li>
+            <a href="fuentes_texto/videos_interesantes.html">Vídeos interesantes</a>
+        </li>
+    </ul>
+
 </body>
 
 </html>
