Fuentes de Google

--- a/HTML/fuentes_texto/videos_interesantes.html
+++ b/HTML/fuentes_texto/videos_interesantes.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vídeos intersantes</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Honk&family=Kalnia+Glaze:wght@100..700&family=Nabla&family=Sixtyfour+Convergence&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
@@ -12,6 +17,12 @@
     <h2 class="ordenador">A test of a virtual singer software</h2>
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Yw6u6YkTgQ4?si=Sf84-EaomHFi2epp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <h2 class="animales">Dolby Vision with Calming Music (Colorfully Dynamic)</h2>
+
+    <p class="animales">Embark on an extraordinary visual journey with our "12K HDR 120fps Dolby Vision" experience, accompanied by calming music for an immersive and colorfully dynamic encounter.</p>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/4iNMyilmDfg?si=jqI_mJzqy8NM91CZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     
 </body>
 </html>
