--- a/HTML/fuentes_texto/videos_interesantes.html
+++ b/HTML/fuentes_texto/videos_interesantes.html
@@ -7,7 +7,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Honk&family=Kalnia+Glaze:wght@100..700&family=Nabla&family=Sixtyfour+Convergence&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Honk&family=Kalnia+Glaze:wght@100..700&family=Marcellus&family=Marcellus+SC&family=Nabla&family=Sixtyfour+Convergence&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="estilos.css">
 </head>
