--- a/HTML/index.html
+++ b/HTML/index.html
@@ -100,6 +100,14 @@
         </li>
     </ul>
 
+    <h2>Bootstrap personalizado (Más información <a href="https://bootstrap.build/app">aquí</a>)</h2>
+
+    <ul>
+        <li>
+            <a href="fuentes_texto/tema_personalizado.html">Tema personalizado</a>
+        </li>
+    </ul>
+
     <h2>Fuentes de letra y estilos de texto</h2>
 
     <ul>
