Listas de enlaces con bootstrap

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,33 +15,20 @@
 
         <h2>Títulos, párrafos, saltos de línea</h2>
 
-        <ul>
-            <li>
-                <a href="conceptos_basicos/monos.html" title="Curiosidades sobre los monos">Monos</a>
-            </li>
-            <li>
-                <a href="conceptos_basicos/langostinos.html" title="Poesía sobre langostinos">Langostinos</a>
-            </li>
-            <li>
-                <a href="conceptos_basicos/coches.html" title="Dibujos de coches hechos con ASCII Art">Coches</a>
-            </li>
-            <li>
-                <a href="conceptos_basicos/naturaleza.html" title="ASCII Art de naturaleza">Naturaleza</a>
-            </li>
-        </ul>
+        <div class="list-group mb-3">
+            <a href="conceptos_basicos/monos.html" title="Curiosidades sobre los monos" class="list-group-item list-group-item-action">Monos</a>
+            <a href="conceptos_basicos/langostinos.html" title="Poesía sobre langostinos" class="list-group-item list-group-item-action">Langostinos</a>
+            <a href="conceptos_basicos/coches.html" title="Dibujos de coches hechos con ASCII Art" class="list-group-item list-group-item-action">Coches</a>
+            <a href="conceptos_basicos/naturaleza.html" title="ASCII Art de naturaleza" class="list-group-item list-group-item-action">Naturaleza</a>
+        </div>
         
         <h2>Formato de texto</h2>
-        <ul>
-            <li>
-                <a href="formato_texto/el_senyor_de_los_anillos.html" title="Extracto de una de las película del Señor de los Anillos">El Señor de los Anillos</a>
-            </li>
-            <li>
-                <a href="formato_texto/volumenes.html" title="Fórmulas pra el cálculo de volúmenes">Volúmenes</a>
-            </li>
-            <li>
-                <a href="formato_texto/ofertas_mochilas.html" title="Ofertas de mnochilas black friday 2024">Ofertas mochilas</a>
-            </li>
-        </ul>
+
+        <div class="list-group mb-3">
+            <a href="formato_texto/el_senyor_de_los_anillos.html" title="Extracto de una de las película del Señor de los Anillos" class="list-group-item list-group-item-action">El Señor de los Anillos</a>
+            <a href="formato_texto/volumenes.html" title="Fórmulas pra el cálculo de volúmenes" class="list-group-item list-group-item-action">Volúmenes</a>
+            <a href="formato_texto/ofertas_mochilas.html" title="Ofertas de mnochilas black friday 2024" class="list-group-item list-group-item-action">Ofertas mochilas</a>
+        </div>
 
         <h2>Enlaces y listas</h2>
 
